# magnum-bootstrap

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  cube_app.cpp  cube_app.hpp  main.cpp  resources.conf  textured_app.cpp  textured_app.hpp  textured_shader.cpp  textured_shader.hpp  triangle_app.cpp  triangle_app.hpp  viewer_app.cpp  viewer_app.hpp
